CB-20434 first refactored applied plugins to the new format and tried to remove unnecessary plugins from libraries where spring should not be applied for sure. Idbms client had spring test lib dependency so I've refactored the testcases since it's overkill to have springtest included for asserts. Removed version from subproject for plugins and added most plugins to the root project apply: false as recommended by the gradle plugin.

--- a/auth-distributor-connector/build.gradle
+++ b/auth-distributor-connector/build.gradle
@@ -1,13 +1,13 @@
-apply plugin: 'com.google.protobuf'
-
 buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
   }
-  dependencies {
-    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
-  }
+}
+
+plugins {
+  id "java-library"
+  id "com.google.protobuf"
 }
 
 dependencies {
@@ -21,10 +21,6 @@ dependencies {
   testImplementation group: 'org.assertj',                         name: 'assertj-core',                   version: assertjVersion
   testImplementation group: 'org.mockito',                         name: 'mockito-core',                   version: mockitoVersion
   testImplementation group: 'org.mockito',                         name: 'mockito-inline',                 version: mockitoVersion
-}
-
-checkstyle {
-  checkstyleMain.exclude '**/generated/**'
 }
 
 protobuf {
