--- a/auth-internal-api/build.gradle
+++ b/auth-internal-api/build.gradle
@@ -3,13 +3,11 @@ buildscript {
         mavenCentral()
         maven { url = "$repoUrl" }
     }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    }
 }
 
 plugins {
-    id "java-library"
+    id 'java'
+    id 'java-library'
 }
 
 dependencies {
