--- a/cluster-dns-connector/build.gradle
+++ b/cluster-dns-connector/build.gradle
@@ -1,25 +1,14 @@
-apply plugin: 'com.google.protobuf'
-
 buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
     maven { url = "$springRepoUrl" }
   }
-  dependencies {
-    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
-  }
 }
 
-apply plugin: 'io.spring.dependency-management'
-
-dependencyManagement {
-  dependencies {
-    dependencySet(group: 'org.springframework.boot', version: springBootVersion) {
-      entry 'spring-boot-starter-test'
-    }
-  }
+plugins {
+  id "java-library"
+  id "com.google.protobuf"
 }
 
 dependencies {
@@ -35,11 +24,6 @@ dependencies {
   }
 
   testImplementation group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-}
-
-checkstyle {
-  checkstyleMain.exclude '**/generated/**'
 }
 
 protobuf {
