--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,24 +6,18 @@ buildscript {
         maven { url = "$springRepoUrl" }
         mavenCentral()
     }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-        classpath "gradle.plugin.com.github.jk1:gradle-license-report:0.3.4"
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:${sonarVersion}"
-    }
 }
 
 plugins {
-    id "com.github.jk1.dependency-license-report" version "2.1"
     id 'java'
+    id "checkstyle"
+    id "jacoco"
     id 'maven-publish'
-    id "org.sonarqube" version "${sonarVersion}"
+    id "io.spring.dependency-management"
+    id "org.springframework.boot"
+    id "org.sonarqube"
+    id "com.github.jk1.dependency-license-report" version "2.1"
 }
-
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: "jacoco"
-apply plugin: org.sonarqube.gradle.SonarQubePlugin
 
 sonarqube {
   properties {
@@ -232,7 +226,6 @@ dependencies {
   implementation project(':structuredevent-service-legacy')
   implementation project(':structuredevent-api-cdp')
   implementation project(':structuredevent-service-cdp')
-  implementation project(':template-manager-blueprint')
   implementation project(':template-manager-recipe')
   implementation project(':template-manager-cmtemplate')
   implementation project(':template-manager-tag')
