--- a/datalake-dr-connector/build.gradle
+++ b/datalake-dr-connector/build.gradle
@@ -1,13 +1,13 @@
-apply plugin: 'com.google.protobuf'
-
 buildscript {
     repositories {
         mavenCentral()
         maven { url = "$repoUrl" }
     }
-    dependencies {
-        classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
-    }
+}
+
+plugins {
+    id 'java'
+    id "com.google.protobuf"
 }
 
 dependencies {
@@ -21,10 +21,6 @@ dependencies {
     }
     testImplementation group: 'org.assertj',                         name: 'assertj-core',                   version: assertjVersion
     testImplementation group: 'org.hamcrest',                        name: 'hamcrest',                       version: hamcrestVersion
-}
-
-checkstyle {
-    checkstyleMain.exclude '**/generated/**'
 }
 
 protobuf {
