--- a/grpc-common/build.gradle
+++ b/grpc-common/build.gradle
@@ -3,13 +3,11 @@ buildscript {
     mavenCentral()
     maven { url = "$repoUrl" }
   }
-  dependencies {
-    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
-  }
 }
 
 plugins {
-    id "java-library"
+  id "java-library"
+  id "com.google.protobuf"
 }
 
 apply plugin: 'com.google.protobuf'
@@ -32,10 +30,6 @@ dependencies {
   testImplementation (group: 'org.mockito',  name: 'mockito-core', version: mockitoVersion) {
     exclude group: 'org.hamcrest'
   }
-}
-
-checkstyle {
-  checkstyleMain.exclude '**/generated/**'
 }
 
 protobuf {
