--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -6,13 +6,13 @@ buildscript {
     maven { url = "$springRepoUrl" }
     mavenCentral()
   }
-  dependencies {
-    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-  }
 }
 
 plugins {
+    id 'java'
+    id 'org.springframework.boot'
     id "maven-publish"
+    id "org.sonarqube"
 }
 
 apply plugin: 'org.springframework.boot'
