--- a/mock-infrastructure/build.gradle
+++ b/mock-infrastructure/build.gradle
@@ -6,18 +6,14 @@ buildscript {
     maven { url = "$springRepoUrl" }
     mavenCentral()
   }
-  dependencies {
-    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-  }
 }
 
 plugins {
+    id 'java'
     id "maven-publish"
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
-
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'java'
 
 bootRun {
   systemProperty "spring.profiles.active", System.properties["spring.profiles.active"]
@@ -90,10 +86,6 @@ dependencies {
 
 dependencies {
     testImplementation group: 'org.junit.jupiter',name: 'junit-jupiter-migrationsupport', version: junitJupiterVersion
-}
-
-checkstyle {
-  checkstyleMain.exclude '**/generated/**'
 }
 
 sourceSets {
