--- a/redbeams/build.gradle
+++ b/redbeams/build.gradle
@@ -6,20 +6,15 @@ buildscript {
     maven { url = "$springRepoUrl" }
     mavenCentral()
   }
-  dependencies {
-    classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:${sonarVersion}"
-  }
 }
 plugins {
   id "java"
   id "checkstyle"
   id "jacoco"
   id "maven-publish"
-  id "org.springframework.boot" version "2.1.2.RELEASE"
-  id "org.sonarqube" version "${sonarVersion}"
+  id "org.springframework.boot"
+  id "org.sonarqube"
 }
-
-apply plugin: org.sonarqube.gradle.SonarQubePlugin
 
 sonarqube {
   properties {
@@ -83,6 +78,10 @@ dependencies {
   testImplementation group: 'org.mockito',               name: 'mockito-core'
   testImplementation project(path: ':common', configuration: 'tests')
   testImplementation project(path: ':flow', configuration: 'tests')
+
+  //should be removed, only here for testing blacklisting
+  testImplementation group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.5.4', ext: 'pom'
+
 
   constraints {
     implementation     group: 'org.yaml',                  name: 'snakeyaml',                      version: snakeYamlVersion
