--- a/streaming-common/build.gradle
+++ b/streaming-common/build.gradle
@@ -1,14 +1,13 @@
-apply plugin: 'com.google.protobuf'
-apply plugin: 'java'
-
 buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
   }
-  dependencies {
-    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
-  }
+}
+
+plugins {
+  id "java-library"
+  id "com.google.protobuf"
 }
 
 dependencies {
