CB-20452 As a workaround we can do an auto thread dump if we run out of the open connections, if we make the readiness probe fail then k8s will remove the pods from the service

--- a/autoscale/build.gradle
+++ b/autoscale/build.gradle
@@ -129,7 +129,7 @@ dependencyManagement {
         dependency group: 'com.fasterxml.jackson.core',    name: 'jackson-databind',               version: jacksonDatabindVersion
         dependency group: 'dnsjava',                       name: 'dnsjava',                        version: '3.5.2'
         dependency group: 'org.springframework',           name: 'spring-context-support',         version: springFrameworkVersion
-        dependency group: 'com.zaxxer',                    name: 'HikariCP',                       version: '3.2.0'
+        dependency group: 'com.zaxxer',                    name: 'HikariCP',                       version: hikariCPVersion
 
         dependency group: 'com.google.code.gson',               name: 'gson',                      version: gsonVersion
         dependency group: 'org.apache.hadoop',                  name: 'hadoop-yarn-api',           version: hadoopVersion
