--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -27,6 +27,9 @@ management:
     health:
       probes:
         enabled: true
+      group:
+        readiness:
+          include: "readinessState,hikariState"
   metrics:
     distribution:
       sla:
