--- a/common/build.gradle
+++ b/common/build.gradle
@@ -20,68 +20,70 @@ dependencies {
 
   api ("io.grpc:grpc-api:$grpcVersion")
 
-  implementation group: 'com.google.protobuf',          name: 'protobuf-java',        version: protobufVersion
+  implementation group: 'com.google.protobuf',              name: 'protobuf-java',                  version: protobufVersion
 
-  implementation group: 'org.slf4j',                             name: 'slf4j-api',                      version: slf4jApiVersion
-  implementation group: 'ch.qos.logback.contrib',                name: 'logback-json-classic',           version: logbackJsonClassicVersion
-  implementation group: 'io.micrometer',                         name: 'micrometer-core',                version: micrometerVersion
-  implementation (group: 'io.micrometer',                         name: 'micrometer-jersey2',             version: micrometerVersion) {
+  implementation group: 'org.slf4j',                        name: 'slf4j-api',                      version: slf4jApiVersion
+  implementation group: 'ch.qos.logback.contrib',           name: 'logback-json-classic',           version: logbackJsonClassicVersion
+  implementation group: 'io.micrometer',                    name: 'micrometer-core',                version: micrometerVersion
+  implementation (group: 'io.micrometer',                   name: 'micrometer-jersey2',             version: micrometerVersion) {
     exclude group: 'org.glassfish.jersey.inject'
   }
-  implementation group: 'io.micrometer',                         name: 'micrometer-registry-prometheus', version: micrometerVersion
-  api group: 'commons-io',                            name: 'commons-io',                     version: apacheCommonsIoVersion
-  api group: 'commons-net',                           name: 'commons-net',                    version: '3.9.0'
-  api group: 'org.apache.commons',                    name: 'commons-collections4',           version: commonsCollections4Version
-  api group: 'com.google.guava',                      name: 'guava',                          version: guavaVersion
-  api group: 'com.google.code.gson',                  name: 'gson',                           version: gsonVersion
-  implementation group: 'org.mybatis',                           name: 'mybatis-migrations',             version: mybatisMigrationVersion
-  implementation group: 'com.fasterxml.jackson.core',            name: 'jackson-databind',               version: jacksonDatabindVersion
-  implementation group: 'com.fasterxml.jackson.datatype',        name: 'jackson-datatype-jdk8',          version: jacksonVersion
-  implementation group: 'com.fasterxml.jackson.datatype',        name: 'jackson-datatype-jsr310',        version: jacksonVersion
-  implementation group: 'com.fasterxml.jackson.datatype',        name: 'jackson-datatype-hibernate5',    version: jacksonVersion
-  implementation group: 'net.sf.json-lib',                       name: 'json-lib',                       version: '2.4',  classifier: 'jdk15'
-  api group: 'net.jcip',                              name: 'jcip-annotations',               version: '1.0'
-  api group: 'com.github.spotbugs',                   name: 'spotbugs-annotations',           version: '4.7.3'
-  api group: 'org.reflections',                       name: 'reflections',                    version: '0.10.2'
+  implementation group: 'io.micrometer',                    name: 'micrometer-registry-prometheus', version: micrometerVersion
+  api group: 'commons-io',                                  name: 'commons-io',                     version: apacheCommonsIoVersion
+  api group: 'commons-net',                                 name: 'commons-net',                    version: '3.9.0'
+  api group: 'org.apache.commons',                          name: 'commons-collections4',           version: commonsCollections4Version
+  api group: 'com.google.guava',                            name: 'guava',                          version: guavaVersion
+  api group: 'com.google.code.gson',                        name: 'gson',                           version: gsonVersion
+  implementation group: 'org.mybatis',                      name: 'mybatis-migrations',             version: mybatisMigrationVersion
+  implementation group: 'com.fasterxml.jackson.core',       name: 'jackson-databind',               version: jacksonDatabindVersion
+  implementation group: 'com.fasterxml.jackson.datatype',   name: 'jackson-datatype-jdk8',          version: jacksonVersion
+  implementation group: 'com.fasterxml.jackson.datatype',   name: 'jackson-datatype-jsr310',        version: jacksonVersion
+  implementation group: 'com.fasterxml.jackson.datatype',   name: 'jackson-datatype-hibernate5',    version: jacksonVersion
+  implementation group: 'net.sf.json-lib',                  name: 'json-lib',                       version: '2.4',  classifier: 'jdk15'
+  api group: 'net.jcip',                                    name: 'jcip-annotations',               version: '1.0'
+  api group: 'com.github.spotbugs',                         name: 'spotbugs-annotations',           version: '4.7.3'
+  api group: 'org.reflections',                             name: 'reflections',                    version: '0.10.2'
 
-  implementation group: 'com.github.ben-manes.caffeine',         name: 'caffeine',                       version: caffeineVersion
-  implementation group: 'org.glassfish.jersey.core',             name: 'jersey-client',                  version: jerseyCoreVersion
-  api group: 'org.glassfish.jersey.media',            name: 'jersey-media-json-jackson',      version: jerseyCoreVersion
-  api group: 'org.glassfish.jersey.ext',              name: 'jersey-proxy-client',            version: jerseyCoreVersion
-  api group: 'org.glassfish.jersey.connectors',       name: 'jersey-apache-connector',        version: jerseyCoreVersion
-  implementation group: 'org.glassfish.jersey.media',            name: 'jersey-media-multipart',         version: jerseyCoreVersion
-  implementation group: 'org.bouncycastle',                      name: 'bcprov-jdk15on',                 version: bouncycastleVersion
-  implementation group: 'org.bouncycastle',                      name: 'bcpkix-jdk15on',                 version: bouncycastleVersion
+  implementation group: 'com.github.ben-manes.caffeine',    name: 'caffeine',                       version: caffeineVersion
+  implementation group: 'org.glassfish.jersey.core',        name: 'jersey-client',                  version: jerseyCoreVersion
+  api group: 'org.glassfish.jersey.media',                  name: 'jersey-media-json-jackson',      version: jerseyCoreVersion
+  api group: 'org.glassfish.jersey.ext',                    name: 'jersey-proxy-client',            version: jerseyCoreVersion
+  api group: 'org.glassfish.jersey.connectors',             name: 'jersey-apache-connector',        version: jerseyCoreVersion
+  implementation group: 'org.glassfish.jersey.media',       name: 'jersey-media-multipart',         version: jerseyCoreVersion
+  implementation group: 'org.bouncycastle',                 name: 'bcprov-jdk15on',                 version: bouncycastleVersion
+  implementation group: 'org.bouncycastle',                 name: 'bcpkix-jdk15on',                 version: bouncycastleVersion
 
-  api group: 'org.springframework.boot',              name: 'spring-boot-autoconfigure',      version: springBootVersion
-  api group: 'org.springframework.boot',              name: 'spring-boot-starter-logging',    version: springBootVersion
-  implementation group: 'org.springframework',                   name: 'spring-beans',                   version: springFrameworkVersion
-  implementation group: 'org.springframework',                   name: 'spring-context',                 version: springFrameworkVersion
-  implementation group: 'org.springframework',                   name: 'spring-context-support',         version: springFrameworkVersion
-  api group: 'org.springframework.data',              name: 'spring-data-jpa',                version: springDataJpaFrameworkVersion
-  api group: 'org.springframework',                   name: 'spring-jdbc',                    version: springFrameworkVersion
-  api group: 'org.hibernate',                         name: 'hibernate-core',                 version: hibernateCoreVersion
-  api group: 'org.springframework',                   name: 'spring-web',                     version: springFrameworkVersion
-  api group: 'org.springframework.boot',              name: 'spring-boot-starter-quartz',     version: springBootVersion
-  api group: 'org.springframework.retry',             name: 'spring-retry',                   version: '1.2.0.RELEASE'
-  api group: 'javax.servlet',                         name: 'javax.servlet-api',              version: '4.0.1'
-  api group: 'javax.transaction',                     name: 'javax.transaction-api',          version: '1.3'
-  api group: 'javax.persistence',                     name: 'javax.persistence-api',          version: '2.2'
-  implementation group: 'org.postgresql',                        name: 'postgresql',                     version: postgreSQLVersion
-  api group: 'org.jasypt',                            name: 'jasypt-hibernate4',              version: jasyptVersion
-  api group: 'io.swagger',                            name: 'swagger-annotations',            version: swaggerVersion
-  implementation group: 'net.sf.json-lib',                       name: 'json-lib',                       version: '2.4',  classifier: 'jdk15'
-  implementation (group: 'com.fasterxml.jackson.core',   name: 'jackson-databind',               version: jacksonDatabindVersion) {
+  api group: 'org.springframework.boot',                    name: 'spring-boot-autoconfigure',      version: springBootVersion
+  api group: 'org.springframework.boot',                    name: 'spring-boot-starter-logging',    version: springBootVersion
+  implementation group: 'org.springframework',              name: 'spring-beans',                   version: springFrameworkVersion
+  implementation group: 'org.springframework',              name: 'spring-context',                 version: springFrameworkVersion
+  implementation group: 'org.springframework',              name: 'spring-context-support',         version: springFrameworkVersion
+  api group: 'org.springframework.data',         name: 'spring-data-jpa',                version: springDataJpaFrameworkVersion
+  api group: 'org.springframework',                         name: 'spring-jdbc',                    version: springFrameworkVersion
+  api group: 'org.hibernate',                               name: 'hibernate-core',                 version: hibernateCoreVersion
+  api group: 'org.springframework',                         name: 'spring-web',                     version: springFrameworkVersion
+  api group: 'org.springframework.boot',                    name: 'spring-boot-starter-quartz',     version: springBootVersion
+  api group: 'org.springframework.retry',                   name: 'spring-retry',                   version: '1.2.0.RELEASE'
+  api group: 'javax.servlet',                               name: 'javax.servlet-api',              version: '4.0.1'
+  api group: 'javax.transaction',                           name: 'javax.transaction-api',          version: '1.3'
+  api group: 'javax.persistence',                           name: 'javax.persistence-api',          version: '2.2'
+  implementation group: 'org.postgresql',                   name: 'postgresql',                     version: postgreSQLVersion
+  api group: 'org.jasypt',                                  name: 'jasypt-hibernate4',              version: jasyptVersion
+  api group: 'io.swagger',                                  name: 'swagger-annotations',            version: swaggerVersion
+  implementation group: 'net.sf.json-lib',                  name: 'json-lib',                       version: '2.4',  classifier: 'jdk15'
+  api group: 'org.springframework.boot',                    name: 'spring-boot-starter-actuator',   version: springBootVersion
+  api group: 'com.zaxxer',                                  name: 'HikariCP',                       version: hikariCPVersion
+  implementation (group: 'com.fasterxml.jackson.core',      name: 'jackson-databind',               version: jacksonDatabindVersion) {
     force = true
   }
-  api group: 'org.springframework.security',        name: 'spring-security-jwt',              version: '1.0.8.RELEASE'
-  api group: 'org.springframework.security',        name: 'spring-security-core',             version: springSecurityVersion
-  api group: 'org.springframework.security',        name: 'spring-security-config',           version: springSecurityVersion
-  api group: 'com.cloudera.crypto',                 name: 'openssl-provider',                 version: clouderaCryptoOpenSslProviderVersion
+  api group: 'org.springframework.security',                name: 'spring-security-jwt',              version: '1.0.8.RELEASE'
+  api group: 'org.springframework.security',                name: 'spring-security-core',             version: springSecurityVersion
+  api group: 'org.springframework.security',                name: 'spring-security-config',           version: springSecurityVersion
+  api group: 'com.cloudera.crypto',                         name: 'openssl-provider',                 version: clouderaCryptoOpenSslProviderVersion
 
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test',       version: springBootVersion
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: springBootVersion
-  testImplementation group: 'org.testcontainers',       name: 'junit-jupiter',                  version: testContainersVersion
+  testImplementation group: 'org.springframework.boot',     name: 'spring-boot-starter-test',       version: springBootVersion
+  testImplementation group: 'org.springframework.boot',     name: 'spring-boot-starter-validation', version: springBootVersion
+  testImplementation group: 'org.testcontainers',           name: 'junit-jupiter',                  version: testContainersVersion
 }
 
 task testJar(type: Jar, dependsOn: testClasses) {
