--- a/datalake/src/main/resources/application.yml
+++ b/datalake/src/main/resources/application.yml
@@ -31,6 +31,9 @@ management:
     health:
       probes:
         enabled: true
+      group:
+        readiness:
+          include: "readinessState,hikariState"
   metrics:
     distribution:
       sla:
