--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -70,6 +70,7 @@ ext {
   h2databaseVersion = '1.3.148'
   mybatisMigrationVersion = '3.3.9'
   postgreSQLVersion = '42.3.7'
+  hikariCPVersion = '4.0.3'
 
   // Crypto
   bouncycastleVersion = '1.70'
