--- a/redbeams/src/main/resources/application.yml
+++ b/redbeams/src/main/resources/application.yml
@@ -25,6 +25,9 @@ management:
     health:
       probes:
         enabled: true
+      group:
+        readiness:
+          include: "readinessState,hikariState"
   metrics:
     distribution:
       sla:
