CB-20674 Implement the prepared API changes to support Java8/11 selection
Includes the following tickets:
* CB-20463 Adds java version field to stack
* CB-20465 Persist java version and populate in response objects and as a salt pillar
* CB-20468 Adds script to change java version with soma basic validation what's going to be applied on the running VM
* CB-20466 Validate selected image supports the forced java version.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -110,6 +110,7 @@ auth:
     targeting.subnets.for.endpoint.access.gateway.enable: true
     cost.calculation.enable: false
     enforce.aws.native.single.az.enabled: false
+    forced.java.version.enabled: true
 crn:
   partition: cdp
   region: us-west-1
