CB-19546 Populate ScalingActivities at various points of an autoscale operation  - ScalingActivityService creates records of scalingActivites during YARN and CB invocations with appropriate messages and ActivityStatuses for success and failure  - New UpdateMonitor will query the FlowEndpoint every 10 mins to retrieve flow status and populate the endTimes as well as translate the failed/successful flows into corresponding ActivityStatuses
Testing
 - Coverage extended for ScalingRequest to include regular and stop start downscale scenairos
 - Added UTs and ParameterizedTests for UpdateMonitor and ActivityUpdateEvaluator respectively
 - UTs added for FlowCommunicator to test usage of remainingFlowIds to query CB

--- a/autoscale/src/main/resources/application.yml
+++ b/autoscale/src/main/resources/application.yml
@@ -67,6 +67,8 @@ periscope:
       enabled: true
     cleanup-monitor:
       enabled: true
+    update-monitor:
+      enabled: true
   scaling-activity:
     cleanup-event-age.hours: 24
 
