CB-20448 Added approximate hourly CO2 cost calculation
Added ability to calculate approximate hourly CO2 cost of environments (including freeipa, sdx and distrox), similarly to how approximate USD cost is calculated.
This feature is behind the CDP_CB_CO2_CALCULATION entitlement.
CO2 calculation is only available for AWS and Azure at the moment.
The emission factors for the specific providers are currently retrieved from static resource files. In the future, if we want to retrieve these emission factors dynamically, we can create a new CO2EmissionFactorService implementation for the given providers.
There are separate endpoints for environments, sdx and distrox.
This commit also enable cost and co2 calculation by default when using mock-thunderhead, running CB locally.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -107,7 +107,8 @@ auth:
     environment.edit.proxy.enable: true
     upgrade.skip.attached.datahubs.check.enable: false
     targeting.subnets.for.endpoint.access.gateway.enable: true
-    cost.calculation.enable: false
+    cost.calculation.enable: true
+    co2.calculation.enable: true
     enforce.aws.native.single.az.enabled: false
 crn:
   partition: cdp
