--- a/datalake/src/main/resources/application.yml
+++ b/datalake/src/main/resources/application.yml
@@ -131,7 +131,9 @@ datalake:
     default: "7.2.15"
     advertised: "7.1.0,7.2.0,7.2.1,7.2.2,7.2.6,7.2.7,7.2.8,7.2.9,7.2.10,7.2.11,7.2.12,7.2.14,7.2.15,7.2.16,7.2.17"
     supported: "7.1.0,7.2.0,7.2.1,7.2.2,7.2.6,7.2.7,7.2.8,7.2.9,7.2.10,7.2.11,7.2.12,7.2.14,7.2.15,7.2.16,7.2.17"
-
+  supported:
+    raz:
+      platform: AWS,AZURE,GCP
 secret:
   application: sdx/shared
   engine: "com.sequenceiq.cloudbreak.service.secret.vault.VaultKvV2Engine"
