CB-20429 Call WIAM for usersync on environment start
- when `WORKLOAD_IAM_USERSYNC_ROUTING` entitlement is enabled the usersync would be initiated through a WIAM call
- added WIAM client to env service
- set grpc timeout for WIAM client

--- a/environment/build.gradle
+++ b/environment/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation     project(':cluster-dns-connector')
     implementation     project(":sdx-connector")
     implementation     project(':usage-collection')
+    implementation     project(':wiam-connector')
 
     implementation     group: "org.yaml",                  name: "snakeyaml",                                version: snakeYamlVersion
     implementation     group: "com.google.code.gson",      name: "gson",                                     version: gsonVersion
