--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -65,7 +65,7 @@ freeipa:
   platform.default.instanceType:
     AWS: m5.large
     AZURE: Standard_DS3_v2
-    GCP: n1-standard-2
+    GCP: e2-standard-2
     MOCK: large
   platform.dnssec.validation:
     AWS: false
