CRB-2448 [FedRAMP] Hide all non core CDP cluster template on FedRAMP control planes. This also involves dps-k8s and csi changes. We can now exclude blueprint by name and also hide templates based on the supported runtimes.

--- a/autoscale/src/main/resources/application.yml
+++ b/autoscale/src/main/resources/application.yml
@@ -73,6 +73,8 @@ periscope:
     cleanup-event-age.hours: 24
 
 cb:
+  enabledplatforms: AWS,AZURE,YARN,GCP,MOCK
+  enabledgovplatforms: AWS
   server:
     contextPath: "/cb"
   cm:
