--- a/cloud-api/build.gradle
+++ b/cloud-api/build.gradle
@@ -24,6 +24,7 @@ dependencies {
   }
   testImplementation group: 'org.hamcrest',               name: 'hamcrest',              version: hamcrestVersion
   testImplementation group: 'org.assertj',                name: 'assertj-core',          version: assertjVersion
+  testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
 
   runtimeOnly            group: 'org.glassfish.jersey.core',  name: 'jersey-common',         version: jerseyCoreVersion
   implementation(    group: 'com.fasterxml.jackson.core', name: 'jackson-databind',      version: jacksonDatabindVersion) {
