--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -141,6 +141,8 @@ environment:
       enabled: false
 
 cb:
+  enabledplatforms: AWS,AZURE,YARN,GCP,MOCK
+  enabledgovplatforms: AWS
   authentication:
     disabled: false
   intermediate.threadpool:
