--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -201,6 +201,7 @@ vault:
       login.role: "cloudbreak.default"
 
 cb:
+  enabledgovplatforms: AWS
   enabledplatforms: AZURE,AWS,GCP
   platform.default.rootVolumeSize:
     AWS: 100
