--- a/redbeams/src/main/resources/application.yml
+++ b/redbeams/src/main/resources/application.yml
@@ -107,6 +107,7 @@ vault:
       login.role: "cloudbreak.default"
 
 cb:
+  enabledgovplatforms: AWS
   enabledplatforms: AZURE,AWS,GCP
   platform.default.rootVolumeSize:
     AWS: 100
