CRB-2448 [FedRAMP] Hide all non core CDP cluster template on FedRAMP control planes. This also involves dps-k8s and csi changes. We can now exclude blueprint by name and also hide templates based on the supported runtimes.

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -202,6 +202,7 @@ vault:
       login.role: "cloudbreak.default"
 
 cb:
+  enabledgovplatforms: AWS
   enabledplatforms: AZURE,AWS,GCP
   platform.default.rootVolumeSize:
     AWS: 100
