--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -82,6 +82,7 @@ auth:
       certificate.auth.enable: true
     aws:
       native.variant.migration.enable: false
+      gp3.enable: true
     gcp:
     cm.ha.enable: false
     conclusion.checker.send.user.event.enable: true
