--- a/cloud-consumption/src/main/resources/application.yml
+++ b/cloud-consumption/src/main/resources/application.yml
@@ -80,6 +80,14 @@ spring:
   freemarker:
     template-loader-path: file:/etc/consumption,classpath:/
     prefer-file-system-access: false
+  jpa:
+    properties:
+      hibernate:
+        generate_statistics: true
+        jdbc:
+          batch_size: 400
+        order_inserts: true
+        order_updates: true
   lifecycle:
     timeout-per-shutdown-phase: 60s
 
