--- a/common/build.gradle
+++ b/common/build.gradle
@@ -61,6 +61,7 @@ dependencies {
   api group: 'org.springframework.data',         name: 'spring-data-jpa',                version: springDataJpaFrameworkVersion
   api group: 'org.springframework',                         name: 'spring-jdbc',                    version: springFrameworkVersion
   api group: 'org.hibernate',                               name: 'hibernate-core',                 version: hibernateCoreVersion
+  api group: 'org.hibernate',                               name: 'hibernate-micrometer',           version: hibernateCoreVersion
   api group: 'org.springframework',                         name: 'spring-web',                     version: springFrameworkVersion
   api group: 'org.springframework.boot',                    name: 'spring-boot-starter-quartz',     version: springBootVersion
   api group: 'org.springframework.retry',                   name: 'spring-retry',                   version: '1.3.4'
