CB-20935 Enable hibernate/jpa metrics in order to help debug DB related issues. This statistic prints  the max elapsed time for each query, the sum and also the count on the /metrics endpoint.
# HELP spring_data_repository_invocations_seconds_max
# TYPE spring_data_repository_invocations_seconds_max gauge
spring_data_repository_invocations_seconds_max\{exception="None",method="findComponentsByClusterIdAndInComponentType",repository="ClusterComponentViewRepository",state="SUCCESS",} 0.00868183

# HELP spring_data_repository_invocations_seconds
# TYPE spring_data_repository_invocations_seconds summary
spring_data_repository_invocations_seconds_count\{exception="None",method="findComponentsByClusterIdAndInComponentType",repository="ClusterComponentViewRepository",state="SUCCESS",} 15.0
spring_data_repository_invocations_seconds_sum\{exception="None",method="findComponentsByClusterIdAndInComponentType",repository="ClusterComponentViewRepository",state="SUCCESS",} 0.03322875
spring_data_repository_invocations_seconds_count\{exception="None",method="findAvailabilityZonesByStackId",repository="InstanceGroupRepository",state="SUCCESS",} 15.0
spring_data_repository_invocations_seconds_sum\{exception="None",method="findAvailabilityZonesByStackId",repository="InstanceGroupRepository",state="SUCCESS",} 0.025264332

--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -215,6 +215,14 @@ spring:
     prefer-file-system-access: false
   datasource:
     maxActive: 30
+  jpa:
+    properties:
+      hibernate:
+        generate_statistics: true
+        jdbc:
+          batch_size: 400
+        order_inserts: true
+        order_updates: true
   lifecycle:
     timeout-per-shutdown-phase: 60s
 
