--- a/autoscale/src/main/resources/application.yml
+++ b/autoscale/src/main/resources/application.yml
@@ -97,14 +97,19 @@ cert:
 spring:
   application:
     name: Periscope
-  cloud:
-    consul:
-      host: consul.service.consul
   freemarker:
     template-loader-path: classpath:/
     prefer-file-system-access: false
   datasource:
       maxActive: 30
+  jpa:
+    properties:
+      hibernate:
+        generate_statistics: true
+        jdbc:
+          batch_size: 400
+        order_inserts: true
+        order_updates: true
   lifecycle:
     timeout-per-shutdown-phase: 60s
 
