CB-20852: Create all Spark3 datahub cluster templates which are necessary for Spark2 deprecation
Spark2 templates will be marked as deprecated in 7.2.17, all Spark3
templates have to be in sync with the Spark2 ones

Main changes:

Added these new templates:

7.2.17 - Data Engineering: HA: Apache Spark3, Apache Hive, Apache Oozie
7.2.17 - Real-time Data Mart: Apache Impala, Hue, Apache Kudu, Apache Spark3
7.2.16 - Data Engineering: HA: Apache Spark3, Apache Hive, Apache Oozie
7.2.16 - Real-time Data Mart: Apache Impala, Hue, Apache Kudu, Apache Spark3

Synced these templates:

7.2.17:  cdp-data-engineering-spark3.bp vs. cdp-data-engineering.bp (7.2.17 - Data Engineering Spark3)
7.2.16:  cdp-data-engineering-spark3.bp vs. cdp-data-engineering.bp (7.2.16 - Data Engineering Spark3)

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -533,9 +533,11 @@ cb:
           7.2.16 - SDX Medium Duty: Apache Hive Metastore, Apache Ranger, Apache Atlas, Profiler Manager=cdp-sdx-medium-ha-profiler;
           7.2.16 - Data Engineering: Apache Spark, Apache Hive, Apache Oozie=cdp-data-engineering;
           7.2.16 - Data Engineering: HA: Apache Spark, Apache Hive, Apache Oozie=cdp-data-engineering-ha;
+          7.2.16 - Data Engineering: HA: Apache Spark3, Apache Hive, Apache Oozie=cdp-data-engineering-spark3-ha;
           7.2.16 - Data Engineering: Apache Spark3=cdp-data-engineering-spark3;
           7.2.16 - Data Mart: Apache Impala, Hue=cdp-data-mart;
           7.2.16 - Real-time Data Mart: Apache Impala, Hue, Apache Kudu, Apache Spark=cdp-rt-data-mart;
+          7.2.16 - Real-time Data Mart: Apache Impala, Hue, Apache Kudu, Apache Spark3=cdp-rt-data-mart-spark3;
           7.2.16 - Streams Messaging High Availability: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-ha;
           7.2.16 - Streams Messaging Heavy Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming;
           7.2.16 - Streams Messaging Light Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-small;
@@ -553,9 +555,11 @@ cb:
           7.2.17 - SDX Medium Duty: Apache Hive Metastore, Apache Ranger, Apache Atlas, Profiler Manager=cdp-sdx-medium-ha-profiler;
           7.2.17 - Data Engineering: Apache Spark, Apache Hive, Apache Oozie=cdp-data-engineering;
           7.2.17 - Data Engineering: HA: Apache Spark, Apache Hive, Apache Oozie=cdp-data-engineering-ha;
+          7.2.17 - Data Engineering: HA: Apache Spark3, Apache Hive, Apache Oozie=cdp-data-engineering-spark3-ha;
           7.2.17 - Data Engineering: Apache Spark3=cdp-data-engineering-spark3;
           7.2.17 - Data Mart: Apache Impala, Hue=cdp-data-mart;
           7.2.17 - Real-time Data Mart: Apache Impala, Hue, Apache Kudu, Apache Spark=cdp-rt-data-mart;
+          7.2.17 - Real-time Data Mart: Apache Impala, Hue, Apache Kudu, Apache Spark3=cdp-rt-data-mart-spark3;
           7.2.17 - Streams Messaging High Availability: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-ha;
           7.2.17 - Streams Messaging Heavy Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming;
           7.2.17 - Streams Messaging Light Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-small;
