CB-21006 - Flow changes to support mounting Ephemeral volumes
1. Modify the vertical scale logic to update the template table with the right temporary storage and the count and size of instance stores.

2. Remove condition logic from mount-instance-storage.j2 file mount_all_sequential method, as this file is only used to mount ephemeral storage and we have to mount ephemral storage to only /ephfs path.

3. Validate that only compute clusters can have instance type changed to instances with ephemeral storage.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -11,6 +11,7 @@ auth:
         file: databus_credentials
   mock:
     baseimage.enable: true
+    verticalscale.enable: true
     event-generation:
       expiration-minutes: 10
     freeipa:
@@ -57,7 +58,7 @@ auth:
     datahub:
       runtime.upgrade.enable: true
       os.upgrade.enable: true
-      instancetypes.enable: false
+      instancetypes.enable: true
     ccmv2.enable: false
     ccmv2jumpgate.enable: false
     ccmv2.useOneWayTls: false
