CB-20723 Conditionally invoke IPA user sync based on CB version associated with cluster, when initializing autoscale machine user  - Added cached API to fetch CB version stored in cluster salt state component Testing  - UTs for new components  - Verified behaviour with real DH cluster

--- a/autoscale/src/main/resources/application.yml
+++ b/autoscale/src/main/resources/application.yml
@@ -88,6 +88,8 @@ cb:
   dependentHostGroups:
     cache.ttl: 10
     max.entries: 500
+  userSync:
+    version.threshold: 2.70.0
 
 rest:
   debug: false
