CB-20934 Create Azure PostgreSQL Flexible Server basic implementation
* The database is reachable on public IP and accessible from everywhere on SSL only
* new cert is added for flexible server ssl connection setup
* No private DNS zone,  no virtual network, no subnet
* Non HA
* In case of flexible server the db username won't contain the hostname

CB-21404 Extend SDX Creation call on API with the azure database type field
API related changes:
* Extend SDXDatabaseRequest with SdxDatabaseAzureRequest
* SdxDatabaseAzureRequest contains the AzureDatabaseType: SINGLE_SERVER / FLEXIBLE_SERVER
* if the SdxDatabaseAzureRequest is missing, the default value is SINGLE_SERVER

Refactor SdxCluster entity object:
* Collect database properties in SdxDatabase entity object
* Add SdxDatabase to SdxCluster
* For backward compatibilty the old database properties cannot be removed in one step from SdxCluster, there is a followup jira for this: CB-21369

In first step environment network have to be a new one or an existing one with "network/azure/noOutboundLoadBalancer: false" property.

--- a/redbeams/src/main/resources/application.yml
+++ b/redbeams/src/main/resources/application.yml
@@ -165,6 +165,7 @@ cb:
     template.path: templates/arm-v2.ftl
     parameter.path: templates/parameters.ftl
     database.template.path: templates/arm-dbstack.ftl
+    flexible.database.template.path: templates/arm-flexible-dbstack.ftl
     app.creation.template:
       command.path: templates/app-creation-command.ftl
       command.audit.path: templates/app-audit-creation-command.ftl
